Y1/Module_2_Object_Oriented_Programming/intellijml-1.1.7/src/test/typeAnnotatorTestData/BackslashOld.java
package typeAnnotatorTestData;

public class BackslashOld {

    /*@ ensures \old(true);
      @ ensures <error descr="Reference cannot be resolved">\old(number)</error>;
      @ ensures <error descr="Reference cannot be resolved">\old(nonExistantVar)</error>;
      @ ensures <error descr="This must be of type boolean, but is Object">\old(new Object())</error>;
      @ ensures <error descr="This must be of type boolean, but is int">\old(getInt())</error>;
      @ pure
    */
    int getInt() {
        return 0;
    }
}
